@@ -13,6 +13,11 @@
 #ifndef UTIL_H
 #define UTIL_H
 
+#include "defines.h"
+#ifdef RUBY_EXTCONF_H
+#include RUBY_EXTCONF_H
+#endif
+
 #ifndef _
 #ifdef __cplusplus
 # ifndef  HAVE_PROTOTYPES
