@@ -1,3 +1,8 @@
+Tue Jul 27 18:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* defines.h, intern.h, missing.h, ruby.h, st.h, util.h: include
+	  config.h and defines.h for autoconf macros.
+
 Mon Jul 26 18:18:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (config.h): add include guard.
